--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
 @import "../../styles/mixins";
 
 .navbar {
-  background: $primary-color;
+  background: $teal-dark;
   color: white;
   padding: 15px;
   display: flex;
