--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import "./mixins";
+@use "./variables";
+@use "./mixins";
 
 * {
   margin: 0;
@@ -8,14 +8,9 @@
   font-family: "Arial", sans-serif;
 }
 
-body {
-  background-color: #f8f9fa;
-  color: #333;
-}
 
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 20px;
+.btn {
+  border: none;
+
+
 }
